--- a/data/tmpl/README.mkd
+++ b/data/tmpl/README.mkd
@@ -1,30 +1,30 @@
 {{.project_name}}
 {{._project_header}}
 
-<< Describe project >>
+<< DESCRIBE PROJECT >>
 
 
 ## Installation
 
-	goinstall << download URL >>
+	goinstall << DOWNLOAD URL >>
 
 
 ## Configuration
 
-<< Instructions to configure the program, if any >>
+<< INSTRUCTIONS TO CONFIGURE THE PROGRAM, IF ANY >>
 
 
 ## Operating instructions
 
-<< Instructions to run the program >>
+<< INSTRUCTIONS TO RUN THE PROGRAM >>
 
 
 ## Licensing
 
 ***{{template "Copyright" .}}***  
 See file AUTHORS and CONTRIBUTORS (if any).
-{{if .license}}
-Licensed under **{{.license}}**.  
+{{if .full_license}}
+Licensed under **{{.full_license}}**.  
 See file LICENSE.
 {{end}}
 
