--- a/README.mkd
+++ b/README.mkd
@@ -6,7 +6,8 @@ Don't know how to structure it?
 Don't know how to apply the license?
 
 **Go-Wizard** creates the base for new Go projects, adds the license header
-to source code files, and creates an ignore file for the VCS given.  
+to source code files, and creates an ignore file for the VCS given.
+
 The ignore file has been configured to ignore files finished in "~" (used like
 backups, in Unix), the ones started with "." (hidden files, in Unix), and the
 ones started with "_" to have files that don't be committed. It also ignores
@@ -25,9 +26,8 @@ To only install the library, which could be used by a Go IDE:
 ## Configuration
 
 If you want not repeat the same input every time you create a project, then you
-could use an user configuration file in your home directory.  
-It allows set the flags *-Author*, *-Author-email*, *-License*, and *-vcs*,
-with a value by default.
+could use an user configuration file in your home directory. It allows set the
+flags *-Author*, *-Author-email*, *-License*, and *-vcs*, with a value by default.
 
 To create it, you have to use the flag *-config*, besides of the required flags
 at creating a project.
@@ -57,7 +57,7 @@ If the configuration file has been set, then it could be shorter now:
 
 	gowizard -Project-name=Go-Bar
 
-Or use another flags than values by default:
+or use another flags than values by default:
 
 	gowizard -Project-name=Go-Bar -License=apache-2
 
@@ -65,8 +65,6 @@ Useful flags:
 
 + ***-i***: the interactive mode is a simple way to get all required
 information, showing the required choices for the flags that need it.
-
-+ ***-d***: prints both values to pass to the templates.
 
 ### Suggestions about naming
 
