--- a/NEWS.mkd
+++ b/NEWS.mkd
@@ -13,6 +13,11 @@ listed below.*
 
 * * *
 
+### 2011-??-??  v1.0
+
++ Use a struct to store configuration from flags instead of global variables.
+
+
 ### 2011-09-18  v0.9.9
 
 + Removed all stuff related to the file Metadata.
