--- a/NEWS.mkd
+++ b/NEWS.mkd
@@ -15,7 +15,8 @@ listed below.*
 
 ### 2011-??-??  v1.0
 
-+ Use a struct to store configuration from flags instead of global variables.
++ Use a struct to handle the configuration instead of use global variables.
++ The command-line flags have been changed to lower case.
 
 
 ### 2011-09-18  v0.9.9
